sass/style.scss
/* ... */
.accordion-title {
	display:flex;
	justify-content:space-between;
	align-items: center;
	padding:20px 0;
	border-top: 1px solid #e0dfdf;
	.fa {
		font-size: 20px;
	}
	h2 {
		margin: 0;
	}
}

.accordion-item:first-child .accordion-title {
	border-top:none;
	cursor:pointer;
}

.accordion-item {
	cursor: pointer;
}

.accordion-item ul li a{
	@include word-wrap();
}

/*
====================================
END: RESEARCH PAGE Styling
====================================
*/

/*
==================================
CLINICIAN RESOURCES (LOGGED IN) Styling
====================================
*/

.form-accordion-container {
	margin-bottom: 50px;
}

.sub-accordion .accordion-item:first-child .accordion-title{
	padding-top: 0;
}

.sub-accordion {
	ul{
		margin-top: 0;
		margin-left: 40px;
	}
	.accordion-title {
		display:inline-block;
		width:100%;
		border-top: none;
		padding-top: 0;
		.fa {
			font-size: 1.6rem;
		}
		div, h3 {
			display: inline-block;
		}
	}
}
/*
====================================
END: CLINICIAN RESOURCES (LOGGED IN) Styling
====================================
*/

/*
====================================
TRAINEE RESOURCES (LOGGED IN) Styling
====================================
*/

.trainee-resources {
	// slider
	.bx-wrapper {
		margin-bottom: 100px;
	}
	.bx-viewport, .bx-wrapper, .bx-slider {
		height:600px;
	}
	iframe {
		width:100%;
		height:600px;
	}
	.bx-controls-direction {
		display:flex;
		justify-content: space-between;
	}
	.disabled {
		opacity:0;
	}
	// disclaimer
	.disclaimer {
		padding: 50px 0;
	}
}

/*
====================================
END: TRAINEE RESOURCES (LOGGED IN) Styling
====================================
*/



/*
==================================
CONTACT US Styling
====================================
*/
.contact-details h2{
	margin-bottom: 0;
	font-size: 2rem;
}

.email {
	margin-top: 20px;
}

.contact-info .container {
	display:flex;
	// margin: 0 auto 50px;
	@include breakpoint(tabletsmall) {
		flex-direction: column;
	}
	.map {
		width:60%;
		@include breakpoint(tabletsmall) {
			width:100%;
			margin-bottom: 20px;
		}
		@include breakpoint(phone) {
			order:2;
			margin-top: 20px;
		}
	}
	.contact-details {
		width:40%;
		@include breakpoint(tabletsmall) {
			order: 1;
			width:100%;
		}
	}
}

.inquiries {
	padding: 50px 0;
	background: #f4f3f2;
	margin-top: 50px;
	@include breakpoint(tabletsmall) {
		margin-top: 20px;
		padding-top: 20px;
	}
	.gform_heading {
		margin-bottom: 50px!important;
	}
	.gform_title {
		font-size: 2.6rem!important;
	}
	.gfield_label {
		text-align: right;
		text-transform: uppercase;
		font-size: 1.4rem!important;
	}
	input {
		height:40px;
	}
	textarea, input {
		border: 1px solid lightgrey;
		border-radius: 3px;
	}
	input[type="submit"] {
		height:initial;
	}
}

#gform_confirmation_message_2 {
	text-align: center;
	font-size: 2.2rem;
	font-weight: 600;
}

/*
====================================
END: CONTACT US Styling
====================================
*/



/*
==================================
LATEST MEDIA COVERAGE PAGE Styling
====================================
*/

.news-items .container {
	display:flex;
	flex-wrap:wrap;
	justify-content:space-between;
	margin-bottom: 50px;
	.news-item div:last-child {
		margin: 20px 0 50px;
	}
	p {
		margin: 0;
	}
	img {
		object-fit: cover;
		height:300px;
	}
	> a {
		width:48%;
		@include breakpoint("709") {
			width:100%;
		}
	}
}

.more {
	background: #F4F3F2;
	padding:50px 0;
	h1 {
		text-transform: capitalize;
	}
	a:last-child > div {
		border-bottom:none;
	}
	img {
		min-width:150px;
	}
	h2 {
		@include breakpoint("560") {
			margin-bottom: 0;
		}
	}
	.news-item {
		display:flex;
		justify-content:space-between;
		padding:50px 0;
		border-bottom: 1px solid #e0dfdf;
		@include breakpoint("560") {
			flex-direction:column;
		}
		p {
			margin: 0;
		}
		div:first-child {
			width:25%;
			img {
				height:auto;
				}
			}
		div:last-child {
			width:73%;
		}
	}
}


/*
====================================
END: LATEST MEDIA COVERAGE
====================================
*/


/*
==================================
ABOUT US
====================================
*/

.top-content-section {
	display: flex;
	justify-content:space-between;
	align-items:center;
	margin: 50px 0;
	@include breakpoint(tabletsmallest) {
		margin: 30px 0;
		flex-direction:column;

	}
	img {
		margin: 0 50px 0 0;
		width:30%;
		@include breakpoint(tabletsmallest) {
			margin: 0 auto 30px;
			width:70%;
		}
	}
}

// ABOUT US HERO SPECIFIC Styling
.page-id-371 .hero strong {
	font-size: 2.8rem;
}

.text-section {
	background: #F4F3F2;
	padding:50px 0;
	@include breakpoint("560") {
		padding: 30px 0;
	}
}
.image-section {
	padding:50px 0;
	text-align: center;
	@include breakpoint("560") {
		padding: 30px 0;
	}
	p {
		width:80%;
		margin: 20px auto 0;
		font-size: 14px;
		@include breakpoint(tabletsmallest) {
			width:100%;
		}
	}
}
/*
====================================
END: ABOUT US
====================================
*/



/*
==================================
LOGIN
====================================
*/

.main.login {
	background: #F4F3F2;
	padding: 50px 0;
}
/* ... */

